[tool:pytest]
# Function starting with the following pattern are considered for test cases.
python_functions=test_

# pytest pycodestyle configuration
codestyle_max_line_length = 80
codestyle_ignore =
    E251
    W504
codestyle_exclude =
    docs/conf.py
    rasa_core/policies/tf_utils.py

[metadata]
description-file = README.md
license_file = LICENSE.txt
