# pytest pycodestyle configuration
[tool:pytest]
# Function starting with the following pattern are considered for test cases.
python_functions=test_

# pytest pycodestyle configuration
codestyle_max_line_length = 88
codestyle_ignore = E302 W503 E203 E501 E265 E402 E251 E211
codestyle_exclude =
    docs/core/conf.py
    docs/nlu/conf.py
    rasa/core/policies/tf_utils.py
    rasa/core/policies/__init__.py
filterwarnings =
    ignore::ResourceWarning:ruamel[.*]

log_cli = 1
log_cli_level = DEBUG

[metadata]
description-file = README.md
license_file = LICENSE.txt
