[tool.poetry]
name = "locust-user-generator"
version = "0.1.0"
description = ""
authors = ["Rasa Technologies GmbH <hi@rasa.com>",]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
locust = "^2.12.1"
python-dotenv = "^0.21.0"
faker = "^15.3.3"
locust-plugins = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"